# trans_manage

./: .env  .gitignore  Cargo.toml  config.yml
src/: main.rs
src/config/: app_config.rs  mod.rs
src/controller/: mod.rs  query.rs
src/dao/: mod.rs
src/domain/: mod.rs
src/domain/domain/: mod.rs
src/domain/dto/: mod.rs
src/domain/vo/: mod.rs
src/service/: mod.rs  sys_lang_service.rs  sys_project_service.rs  sys_user_service.rs  translate.rs
src/utils/: jwt.rs  mod.rs  session.rs  sql_helper.rs
