[package]
name = "rust_rabits"
version = "0.1.0"
authors = ["MrTan <freemrtan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde and base types
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
chrono = { version ="0.4.15", features = ["serde"] }
lazy_static = "1.4.0"
#log
env_logger = "0.7.1"
#runtime
# tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.40"
#rbatis orm dep
rbatis-core = { version = "1.5.2", features = ["all"]}
rbatis =  { version = "1.5.2" }
rbatis-macro-driver = { version = "1.5.2" }

#web server
actix-web = "3.0.1"
actix-http = "2.0.0"
actix-rt = "1.1.1"
actix-cors = "0.3.0"

#redis
# redis = "0.17.0"

#jwt
jsonwebtoken = "7"
#uuid
uuid = "0.8"
md5 = "0.7.0"

yaml-rust = "0.4"

async-graphql = "2.0.0-alpha.7"
async-graphql-actix-web = "2.0.0-alpha.7"
futures = "0.3.5"