[package]
name = "rust_rabits"
version = "0.1.0"
authors = ["MrTan <freemrtan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde and base types
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
chrono = { version = "0.4.15", features = ["serde"] }
lazy_static = "1.4.0"
#log
env_logger = "0.7.1"
#runtime
# tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.40"
#sqlx orm dep
sqlx = { version = "0.4.0-beta.1", features = ["sqlite"] }

#web server
actix-web = "3.0.1"
actix-http = "2.0.0"
actix-rt = "1.1.1"
actix-cors = "0.3.0"

#redis
# redis = "0.17.0"

#jwt
jsonwebtoken = "7"
#uuid
#uuid = "0.8"
md5 = "0.7.0"

yaml-rust = "0.4"

async-graphql = "2.0.0-alpha.7"
async-graphql-actix-web = "2.0.0-alpha.7"
futures = "0.3.5"
once_cell = "1.4.1"

[dev-dependencies]
fast_log = "1.2.3"
async-std = { version = "1.6.3", features = ["attributes"] }